# naval_battle

./: CMakeLists.txt
files/ability/include/: Ability.h  AbilityManager.h  Bombardment.h  DoubleDamage.h  Scanner.h
files/ability/src/: AbilityManager.cpp  Bombardment.cpp  DoubleDamage.cpp  Scanner.cpp
files/core/include/: Console.h  Game.h  GameExceptions.h  GameLogic.h  GameSave.h  GameState.h  KeyCodes.h  ManagerShips.h
files/core/src/: Console.cpp  Game.cpp  GameLogic.cpp  GameSave.cpp  ManagerShips.cpp  main.cpp
files/entities/include/: Cell.h  GameField.h  Player.h  Ship.h  ShipPoint.h
files/entities/src/: Cell.cpp  GameField.cpp  Player.cpp  Ship.cpp  ShipPoint.cpp
files/field_settings/include/: FieldSettingsDisplay.h  FieldSettingsInput.h  FieldSettingsState.h
files/field_settings/src/: FieldSettingsDisplay.cpp  FieldSettingsInput.cpp  FieldSettingsState.cpp
files/game_field/include/: GameField.h  GameFieldDisplay.h  GameFieldInput.h
files/game_field/src/: GameField.cpp  GameFieldDisplay.cpp  GameFieldInput.cpp
files/kl/: abilities_manager.cpp  field.cpp  game.cpp  game_state.cpp  manager.cpp
files/menu/include/: MenuDisplay.h  MenuInput.h  MenuState.h
files/menu/src/: MenuDisplay.cpp  MenuInput.cpp  MenuState.cpp
resources/: resources.rc
